--- a/src/components/Stage/Stage.sass
+++ b/src/components/Stage/Stage.sass
@@ -5,7 +5,7 @@
   margin-left: 0px
   min-width: 100px
   overflow: auto
-  padding: 1.5em 1.5em 8em
+  padding: 1.5em 1.5em 0
   position: relative
   transition: margin-left $duration-entering-screen $easing-ease-out
 
